--- a/main/templates/notebook_specification.html
+++ b/main/templates/notebook_specification.html
@@ -5,6 +5,33 @@
     <title>Title</title>
 </head>
 <body>
-
+<table class="table">
+    <tbody>
+    <tr>
+        <td>Diagonal</td>
+        <td>{{ product.diagonal }}</td>
+    </tr>
+    <tr>
+        <td>Display Type</td>
+        <td>{{ product.display_type }}</td>
+    </tr>
+    <tr>
+        <td>Processor</td>
+        <td>{{ product.processor_freq }}</td>
+    </tr>
+    <tr>
+        <td>Ram</td>
+        <td>{{ product.ram }}</td>
+    </tr>
+    <tr>
+        <td>Video</td>
+        <td>{{ product.video}}</td>
+    </tr>
+     <tr>
+        <td>Battery</td>
+        <td>{{ product.battery_charge_time}}</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
