--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-
+{% load specifications %}
 {% block content %}
-    <nav aria-label="breadcrumb mt-3" class="mt-3">
+    <nav aria-label="breadcrumb mt-3" class="mt-4">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'base' %}">Home</a></li>
             <li class="breadcrumb-item"><a href="#">{{ product.category.name }}</a></li>
@@ -9,7 +9,6 @@
         </ol>
     </nav>
     <div class="row">
-
         <div class="col-md-4">
             <img src="{{ product.image.url }}">
         </div>
@@ -17,9 +16,9 @@
             <h3>{{ product.title }}</h3>
             <p>Price: {{ product.price }}</p>
             <p>Description: {{ product.description }}</p>
-            <p>Characters: </p>
         </div>
-
+        <p class="mt-4">Characters: </p>
+        {{ product|product_spec }}
     </div>
 
 
