--- a/main/templates/smartphone_specification.html
+++ b/main/templates/smartphone_specification.html
@@ -5,6 +5,45 @@
     <title>Title</title>
 </head>
 <body>
-
+<table class="table">
+    <tbody>
+    <tr>
+        <td>Diagonal</td>
+        <td>{{ product.diagonal }}</td>
+    </tr>
+    <tr>
+        <td>Display Type</td>
+        <td>{{ product.display_type }}</td>
+    </tr>
+    <tr>
+        <td>Resolution</td>
+        <td>{{ product.resolution }}</td>
+    </tr>
+    <tr>
+        <td>Accumulator</td>
+        <td>{{ product.accum_volume }}</td>
+    </tr>
+    <tr>
+        <td>Ram</td>
+        <td>{{ product.ram}}</td>
+    </tr>
+     <tr>
+        <td>Sd</td>
+        <td>{{ product.sd}}</td>
+    </tr>
+    <tr>
+        <td>Sd Volume Max</td>
+        <td>{{ product.sd_volume_max}}</td>
+    </tr>
+    <tr>
+        <td>Main Camera</td>
+        <td>{{ product.main_cam}}</td>
+    </tr>
+    <tr>
+        <td>Front Camera</td>
+        <td>{{ product.front_cam}}</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
