--- a/main/templates/cart.html
+++ b/main/templates/cart.html
@@ -2,27 +2,59 @@
 {% block content %}
 
     <h3 class="text-center mt-5 mb-5"> Your Cart {% if not cart.products.count %}empty{% endif %}</h3>
-    <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">NAME</th>
-      <th scope="col">IMAGE</th>
-      <th scope="col">PRICE</th>
-      <th scope="col">COUNT</th>
-      <th scope="col">TOTAL PRICE</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for item in cart.products.all %}
-    <tr>
-      <th scope="row">{{ item.content_object.title }}</th>
-      <td><img src="{{ item.content_object.image.url }}" class="img-fluid"></td>
-      <td>{{ item.content_object.price }} RUB</td>
-      <td>{{item.count}}</td>
-      <td>{{item.total_price}} RUB</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
+    {% if messages %}
 
-{% endblock content%}
+        {% for message in messages %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>{{ message }}</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    {% endif %}
+    {% if cart.products.count %}
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">NAME</th>
+                <th scope="col">IMAGE</th>
+                <th scope="col">PRICE</th>
+                <th scope="col">COUNT</th>
+                <th scope="col">TOTAL PRICE</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for item in cart.products.all %}
+                <tr>
+                    <th scope="row">{{ item.content_object.title }}</th>
+                    <td><img src="{{ item.content_object.image.url }}" class="img-fluid"></td>
+                    <td>{{ item.content_object.price }} RUB</td>
+                    <td>
+                        <form action="{% url 'change-count' ct_model=item.content_object.get_model_name slug=item.content_object.slug %}"
+                              method="post">
+                            {% csrf_token %}
+                            <input type="number" class="form-control" name="count" style="width: 70px" min="1"
+                                   value="{{ item.count }}">
+                            <br>
+                            <input type="submit" class="bth btn-primary" value="Change Count">
+                        </form>
+                    </td>
+                    <td>{{ item.total_price }} RUB</td>
+                    <td>
+                        <a href="{% url 'delete_from_cart' ct_model=item.content_object.get_model_name slug=item.content_object.slug %}">
+                            <button class="btn btn-danger">Delete</button>
+                        </a></td>
+                </tr>
+            {% endfor %}
+            <tr>
+                <td colspan="2"></td>
+                <td>Result</td>
+                <td>{{ cart.total_products }}</td>
+                <td><strong>{{ cart.final_price }} RUB</strong></td>
+            </tr>
+            </tbody>
+        </table>
+    {% endif %}
+{% endblock content %}
