--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -36,7 +36,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'cart' %}">Cart <span class="badge badge-pill badge-danger">{{ cart.products.count }}</span> </a>
+                    <a class="nav-link" href="{% url 'cart' %}">Cart <span
+                            class="badge badge-pill badge-danger">{{ cart.products.count }}</span> </a>
                 </li>
             </ul>
         </div>
@@ -60,8 +61,21 @@
         </div>
         <!-- /.col-lg-3 -->
 
+
         <div class="col-lg-9">
             {% block content %}
+
+                {% if messages %}
+
+                    {% for message in messages %}
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>{{ message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
                 <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -92,18 +106,21 @@
                 <div class="row">
                     {% for product in products %}
                         <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="{{ product.get_absolute_url }}"><img class="card-img-top" src="{{ product.image.url }}" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
-                                </h4>
-                                <h5>{{ product.price }} руб</h5>
-                                <p class="card-text"></p>
+                            <div class="card h-100">
+                                <a href="{{ product.get_absolute_url }}"><img class="card-img-top"
+                                                                              src="{{ product.image.url }}" alt=""></a>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                                    </h4>
+                                    <h5>{{ product.price }} RUB</h5>
+                                    <a href="{% url 'add_to_cart' ct_model=product.get_model_name slug=product.slug %}">
+                                        <button class="btn btn-danger">Add to cart</button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
- {% endfor %}
+                    {% endfor %}
                 </div>
                 <!-- /.row -->
             {% endblock content %}
